Fix modal overflow content

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -39,7 +39,9 @@
 .modal-filter {
   .body {
     padding: 20px;
-    max-height: calc(100vh - 150px);
+    max-height: calc(100vh - 330px);
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
   .footer {
     padding: 20px;
